# Autogen-MultiAgent

./: autogen_core_1.py  banking_agent.py  customer_service_autogen.py  groq_chat_completion.ipynb  pyproject.toml  requirements.txt
banking_chatbot/: streamlit_app.py
banking_chatbot/app/: main.py
banking_chatbot/app/agents/: authentication_agent.py  base_agent.py  domain_agents.py  domain_classifier_agent.py  payments_agent.py  retail_banking_agent.py  retail_sub_agents.py  test.py  user_agent.py
banking_chatbot/app/credentials/: accounts.csv  ledger.csv  users.csv
banking_chatbot/app/messages/: message_types.py
banking_chatbot/app/runner/: main.py
banking_chatbot/app/runtime/: runtime_manager.py
banking_chatbot/app/tools/: credential_utils.py  delegate_tools.py  transaction_tools.py
misc/: banking_agent_2.py
misc - ignore/: autogen_core_2.py  banking_agent.py  banking_agent_1.py  banking_agent_test.py  customer_service_autogen.py  main.py
payment_gateway/: main.py  transactions.csv
